--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <a role="button" href="http://beerstrot.github.io/menu">Scopri le Delizie &rarr;</a>
             </div>
             <div class="medium-6 large-6 columns">
-                <img src="http://beerstrot.github.io/img/large/tris-mini-hamburger.jpg" alt="" class="extra-space-image-tab-home">
+                <a role="button" href="http://beerstrot.github.io/menu"><img src="http://beerstrot.github.io/img/large/tris-mini-hamburger.jpg" alt="" class="extra-space-image-tab-home"></a>
             </div>
         </div>
     </div>
@@ -82,7 +82,7 @@
                     <a role="button" href="http://beerstrot.github.io/eventi">Scopri i Prossimi Eventi &rarr;</a>
             </div>
             <div class="medium-6 large-6 medium-pull-6 large-pull-6 columns">
-                <img src="http://beerstrot.github.io/img/large/burlesque.jpg" alt="" class="extra-space-image-tab-home">
+                <a role="button" href="http://beerstrot.github.io/eventi"><img src="http://beerstrot.github.io/img/large/burlesque.jpg" alt="" class="extra-space-image-tab-home"></a>
             </div>
         </div>
     </div>
@@ -96,7 +96,7 @@
                 <a role="button" href="http://beerstrot.github.io/chi-siamo">Scopri Chi Siamo &rarr;</a>
             </div>
             <div class="medium-6 large-6 columns">
-                <img src="http://beerstrot.github.io/img/large/birreria-panorama.jpg" alt="" class="extra-space-image-tab-home">
+                <a role="button" href="http://beerstrot.github.io/chi-siamo"><img src="http://beerstrot.github.io/img/large/birreria-panorama.jpg" alt="" class="extra-space-image-tab-home"></a>
             </div>
         </div>
     </div>
