--- a/contatti/index.html
+++ b/contatti/index.html
@@ -43,14 +43,13 @@
     <header class="row">
         <div class="medium-12 large-12 columns">
             <h1>Contatti</h1>
-            <hr>
+            <br>
         </div>
     </header>
-    <div class="row">
-        <div class="medium-8 large-8 columns">
-            <div class="row">
-                <section class="medium-12 large-12 columns">
-                    <h2>Ca' Vecchia Beerstrot</h2>
+    <div class="panel-home-2n">
+        <div class="row">
+            <div class="medium-6 large-6 columns">
+                <h2>Ca' Vecchia Beerstrot</h2>
                     <h6>Telefono: 
                         <a href="tel:+393385071940"><span itemprop="telephone">+39 338 5071940</span></a>
                     </h6>
@@ -65,148 +64,59 @@
                         <span itemprop="addressRegion">AN</span>
                         <span class="hide-for-small" itemprop="addressCountry">italia</span></a> 
                     </h6>
-                    <div class="row">
-                        <div class="medium-11 large-11 columns extra-space-image-event-blog">
-                            <a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                                <img src="http://beerstrot.it/img/thumbs/mappa-th.jpg" alt="mappa">
-                            </a>
-                        </div>
-                    </div>
-                </section>
+                    <a role="button" href="tel:+393385071940" class="button extra-space-button">Prenota un Tavolo</a>
             </div>
-                        
-            <div class="row">
-                <section class="medium-12 large-12 columns extra-space">
-                <h2>Media Kit</h2>
-                <p>Giornalista, blogger o vuoi semplicemente scrivere di noi sui social o a un amico?</p>
-<!-- mostra per medium and smaller inizio -->
-                    <div class="hide-for-large-up">
-                        <a role="button" href="#" class="button extra-space-button" data-reveal-id="press-kit">Richiedi il Media Kit</a>
-                        <div id="press-kit" class="reveal-modal large" data-reveal>
-                            <form action="input">
-                                <div class="row">
-                                    <div class="small-10 medium-6 columns">  
-                                        <label>Nome e Cognome
-                                            <input type="text" placeholder="Nome Cognome" />
-                                        </label>
-                                    </div>
-                                    <div class="small-12  medium-8 columns end">  
-                                        <label>Email
-                                            <input type="email" placeholder="esempio@esempio.it" />
-                                          </label>
-                                    </div>
-                                </div>
-                                <div class="row"> 
-                                    <div class="small-6  medium-5 columns">  
-                                        <label>Telefono
-                                            <input type="tel" placeholder="telefono" />
-                                        </label>
-                                    </div>
-                                    <div class="small-6 medium-5 columns end">
-                                        <label>Professione
-                                            <select>
-                                                <option value="1"></option>
-                                                <option value="1">Giornalista</option>
-                                                <option value="2">Blogger</option>
-                                                <option value="4">Altro</option>
-                                            </select>
-                                          </label>
-                                      </div>
-                                </div>
-                                <div class="row">
-                                    <div class="small-12 medium-12 columns">
-                                        <a role="button" href="#" class="button extra-space-button">Scarica il Media Kit</a>
-                                    </div>
-                                </div>
-                            </form>
-                            <a class="close-reveal-modal">&#215;</a>
-                        </div>
-                    </div>
-<!-- mostra per medium and smaller fine -->
-<!-- mostra per large-up inizio -->
-                    <div class="show-for-large-up">
-                        <p>Compila tutti i campi del form e scarica le informazioni su Ca' Vecchia Beerstrot.</p>
-                        <form action="input">
-                            <div class="row">
-                                <div class="large-5 columns">  
-                                    <label>Nome e Cognome
-                                        <input type="text" placeholder="Nome Cognome" />
-                                    </label>
-                                </div>
-                                <div class="large-5 columns end">  
-                                    <label>Email
-                                        <input type="email" placeholder="esempio@esempio.it" />
-                                    </label>
-                                </div> 
-                            </div>
-                            <div class="row">
-                                <div class="large-3 columns">  
-                                    <label>Telefono
-                                        <input type="tel" placeholder="telefono" />
-                                    </label>
-                                </div>
-                                <div class="large-4 columns end">  
-                                    <label>Professione
-                                        <select>
-                                            <option value="0"></option>
-                                            <option value="1">Giornalista</option>
-                                            <option value="2">Blogger</option>
-                                            <option value="3">Altro</option>
-                                        </select>
-                                      </label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="large-12 columns">
-                                    <a role="button" href="#" class="button extra-space-button">Scarica il Media Kit</a>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-<!-- mostra per large-up fine -->                            
-                </section>
+            <div class="medium-6 large-6 columns">
+                <a role="button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><img class="extra-space-image-tab-contatti" src="http://beerstrot.it/img/thumbs/mappa-th.jpg" alt="mappa"></a>
             </div>
         </div>
-        <aside class="medium-4 large-4 columns panel-footer show-for-medium-up">
-            <section>
-                <span class="extra-space"></span>
-                <h4 class="subheader">Orari apertura</h4>
-                <meta itemprop="openingHours" content="Tu,We,Th,Fr 12:00-14:00">
-                <meta itemprop="openingHours" content="Tu,We,Th,Fr 18:00-00:00">
-                <meta itemprop="openingHours" content="Sa 18:00-01:00">
-                <meta itemprop="openingHours" content="Su 12:00-22:00">
-                <div class="row">
-                    <div class="large-5 medium-5 small-6 columns">
-                        <h6>Mar-Ven</h6>
+    </div>
+    <div class="panel-home-n">
+        <div class="row">
+            <div class="medium-6 large-6 columns">
+                <h2>Press Kit</h2>
+                <p>Giornalista, blogger o vuoi semplicemente scrivere di noi sui social o a un amico?</p>
+                <p>Compila i campi del form e scarica le informazioni e le fotografie di Ca' Vecchia Beerstrot.</p>
+            </div>
+            <div class="medium-6 large-6 columns">
+                <form action="input" class="extra-space-text-tab-contatti">
+                    <div class="row">
+                        <div class="small-10 medium-6 columns">  
+                            <label>Nome e Cognome
+                                <input type="text" placeholder="Nome Cognome" />
+                            </label>
+                        </div>
+                        <div class="small-12  medium-8 columns end">  
+                            <label>Email
+                                <input type="email" placeholder="esempio@esempio.it" />
+                              </label>
+                        </div>
                     </div>
-                    <div class="large-7 medium-7 small-6 columns">
-                        <h6>12&ensp;&ndash;&ensp;14
-                            <br>18&ensp;&ndash;&ensp;00
-                        </h6>
+                    <div class="row"> 
+                        <div class="small-6  medium-5 columns">  
+                            <label>Telefono
+                                <input type="tel" placeholder="telefono" />
+                            </label>
+                        </div>
+                        <div class="small-6 medium-5 columns end">
+                            <label>Professione
+                                <select>
+                                    <option value="1"></option>
+                                    <option value="1">Giornalista</option>
+                                    <option value="2">Blogger</option>
+                                    <option value="4">Altro</option>
+                                </select>
+                              </label>
+                          </div>
                     </div>
-                    <div class="large-5 medium-5 small-6 columns">
-                        <h6>Sabato</h6>
+                    <div class="row">
+                        <div class="small-12 medium-12 columns">
+                            <a role="button" href="#" class="button extra-space-button">Scarica il Media Kit</a>
+                        </div>
                     </div>
-                    <div class="large-7 medium-7 small-6 columns">
-                        <h6>18&ensp;&ndash;&ensp;01</h6>
-                    </div>
-                    <div class="large-5 medium-5 small-6 columns">
-                        <h6>Domenica</h6>
-                    </div>
-                    <div class="large-7 medium-7 small-6 columns">
-                        <h6>12&ensp;&ndash;&ensp;22</h6>
-                    </div>
-                </div>
-                <p><em>Chiuso il Lunedì</em></p>
-            </section>
-<!-- prenota online -->
-            <section class="extra-space show-for-medium-up">
-                <h4 class="subheader">Prenota</h4>
-                <h6>
-                    <a href="tel:+393385071940"><span itemprop="telephone">+39 338 5071940</span></a>
-                </h6>
-            </section>
-        </aside>
+                </form>
+            </div>
+        </div>
     </div>
 <!-- inizio footer -->
     <footer class="panel-prefooter extra-space-footer">
