--- a/eventi/index.html
+++ b/eventi/index.html
@@ -56,7 +56,7 @@
                     <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
                 </div>
                 <div class="medium-3 large-3 columns">
-                    <img class="extra-space-image-event" src="http://beerstrot.github.io/img/thumbs/burlesque-th.jpg" alt="Burlesque">
+                    <a href="http://beerstrot.github.io/eventi/apertura.html"><img class="extra-space-image-event" src="http://beerstrot.github.io/img/thumbs/burlesque-th.jpg" alt="Burlesque"></a>
                 </div>
                 <div class="medium-6 large-6 columns">
                     <h2>Apertura col botto</h2>
