--- a/eventi/apertura.html
+++ b/eventi/apertura.html
@@ -18,7 +18,7 @@
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Apertura col Botto"/>
     <meta property="og:description" content="Apriamo le danze con un grande spettacolo. Birre artigianali e hamburger come se piovesse."/>
-    <meta property="og:image" content="http://beerstrot.github.io/img/large/birre-in-love.jpg"/>
+    <meta property="og:image" content="http://beerstrot.github.io/img/large/burlesque.jpg"/>
     <link rel="canonical" href="http://beerstrot.it/eventi/apertura.html"/>
     <link rel="stylesheet" href="http://beerstrot.github.io/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
