--- a/chi-siamo/team/andrea-tagliazucchi.html
+++ b/chi-siamo/team/andrea-tagliazucchi.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Fondatore di Beerstrot e barista in charge"/>
     <meta name="author" content="Ca' Vecchia Beerstrot" />
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
-    <link rel="stylesheet" href="http://beerstrot.github.io/css/app.css"/>
+    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -17,7 +17,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
-                 <h1><a href="http://beerstrot.github.io"><img class="img-logo" src="http://beerstrot.github.io/img/svgs/logo-red.svg" alt="logo"></a></h1>
+                 <h1><a href="http://beerstrot.it"><img class="img-logo" src="http://beerstrot.it/img/svgs/logo-red.svg" alt="logo"></a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -26,15 +26,15 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/menu">Menu</a></li>
+                <li><a href="http://beerstrot.it/menu">Menu</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/eventi">Eventi</a></li>
+                <li><a href="http://beerstrot.it/eventi">Eventi</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/chi-siamo">Chi Siamo</a></li>
+                <li><a href="http://beerstrot.it/chi-siamo">Chi Siamo</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/contatti">Contatti</a></li>
+                <li><a href="http://beerstrot.it/contatti">Contatti</a></li>
                 <li class="divider"></li>
-                <li class="active"><a href="http://beerstrot.github.io/blog">Blog</a></li>
+                <li class="active"><a href="http://beerstrot.it/blog">Blog</a></li>
             </ul>
         </section>
     </nav>
@@ -42,8 +42,8 @@
 <!-- inizio header -->
     <header>
         <div id="image-background-team">
-            <img class="image-hero" src="http://beerstrot.github.io/img/large/tapas.jpg" alt="birre stupende" />
-             <img class="user-image" src="http://beerstrot.github.io/img/thumbs/andrea-tagliazucchi-th.jpg" alt="Andrea Tagliazucchi">
+            <img class="image-hero" src="http://beerstrot.it/img/large/tapas.jpg" alt="birre stupende" />
+             <img class="user-image" src="http://beerstrot.it/img/thumbs/andrea-tagliazucchi-th.jpg" alt="Andrea Tagliazucchi">
         </div>
         <div class="row">
             <div class="medium-10 large-9 columns extra-space">
@@ -178,18 +178,18 @@
     <div class="row">
         <div class="small-12 medium-12 large-12 columns">
             <ul class="inline-list navbar-footer-font">
-                <li><a href="http://beerstrot.github.io">Home</a></li>
-                <li><a href="http://beerstrot.github.io/menu">Menu</a></li>
-                <li><a href="http://beerstrot.github.io/eventi">Eventi</a></li>
-                <li><a href="http://beerstrot.github.io/chi-siamo">Chi Siamo</a></li>
-                <li><a href="http://beerstrot.github.io/contatti">Contatti</a></li>
-                <li><a href="http://beerstrot.github.io/blog">Blog</a></li>
+                <li><a href="http://beerstrot.it">Home</a></li>
+                <li><a href="http://beerstrot.it/menu">Menu</a></li>
+                <li><a href="http://beerstrot.it/eventi">Eventi</a></li>
+                <li><a href="http://beerstrot.it/chi-siamo">Chi Siamo</a></li>
+                <li><a href="http://beerstrot.it/contatti">Contatti</a></li>
+                <li><a href="http://beerstrot.it/blog">Blog</a></li>
             </ul>
         </div>
     </div>
 <!-- fine navbar footer-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.1/js/foundation.min.js"></script>
-    <script src="http://beerstrot.github.io/js/app.min.js"></script>
+    <script src="http://beerstrot.it/js/app.min.js"></script>
 </body>
 </html>
