--- a/eventi/apertura.html
+++ b/eventi/apertura.html
@@ -12,15 +12,15 @@
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Apertura col Botto"/>
     <meta name="twitter:description" content="Apriamo le danze con un grande spettacolo. Birre artigianali e hamburger come se piovesse."/>
-    <meta name="twitter:image" content="http://beerstrot.github.io/img/large/birre-in-love.jpg"/>
+    <meta name="twitter:image" content="http://beerstrot.it/img/large/birre-in-love.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/eventi/apertura.html"/>
     <meta property="og:url" content="http://beerstrot.it/eventi/apertura.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Apertura col Botto"/>
     <meta property="og:description" content="Apriamo le danze con un grande spettacolo. Birre artigianali e hamburger come se piovesse."/>
-    <meta property="og:image" content="http://beerstrot.github.io/img/large/burlesque.jpg"/>
+    <meta property="og:image" content="http://beerstrot.it/img/large/burlesque.jpg"/>
     <link rel="canonical" href="http://beerstrot.it/eventi/apertura.html"/>
-    <link rel="stylesheet" href="http://beerstrot.github.io/css/app.css"/>
+    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -29,7 +29,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
-                 <h1><a href="http://beerstrot.github.io"><img class="img-logo" src="http://beerstrot.github.io/img/svgs/logo-red.svg" alt="logo"></a></h1>
+                 <h1><a href="http://beerstrot.it"><img class="img-logo" src="http://beerstrot.it/img/svgs/logo-red.svg" alt="logo"></a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -38,21 +38,21 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/menu">Menu</a></li>
+                <li><a href="http://beerstrot.it/menu">Menu</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/eventi">Eventi</a></li>
+                <li><a href="http://beerstrot.it/eventi">Eventi</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/chi-siamo">Chi Siamo</a></li>
+                <li><a href="http://beerstrot.it/chi-siamo">Chi Siamo</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/contatti">Contatti</a></li>
+                <li><a href="http://beerstrot.it/contatti">Contatti</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/blog">Blog</a></li>
+                <li><a href="http://beerstrot.it/blog">Blog</a></li>
             </ul>
         </section>
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://beerstrot.github.io/img/large/burlesque.jpg" alt="Violino" />
+    <img class="image-hero" src="http://beerstrot.it/img/large/burlesque.jpg" alt="Violino" />
     <div class="row">
         <article>
             <aside class="medium-4 large-4 columns">
@@ -60,8 +60,8 @@
                     <div class="row">
                         <div class="medium-12 large-12 columns">
                             <h1>Apertura col botto</h1>
-                            <h6 class="by-line">Scritto da <a href="http://beerstrot.github.io/chi-siamo/team/giulia-mazza.html">Giulia Mazza</a>
-                            <h6 class="by-line">foto <a href="http://beerstrot.github.io/chi-siamo/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
+                            <h6 class="by-line">Scritto da <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">Giulia Mazza</a>
+                            <h6 class="by-line">foto <a href="http://beerstrot.it/chi-siamo/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
                         </div>
                     </div>
                     <div class="row">
@@ -119,8 +119,8 @@
     <div class="row">
         <div class="medium-8 medium-push-4 large-8 large-push-4 columns">
             <div class="clearfix">
-                <a href="http://beerstrot.github.io/eventi" class="left">&larr; Lista eventi</a>
-                <a href="http://beerstrot.github.io/eventi/flamenco-e-birra.html" class="right">Flamenco e Birra &rarr; </a>
+                <a href="http://beerstrot.it/eventi" class="left">&larr; Lista eventi</a>
+                <a href="http://beerstrot.it/eventi/flamenco-e-birra.html" class="right">Flamenco e Birra &rarr; </a>
             </div>
         </div> 
     </div>
@@ -259,18 +259,18 @@
     <div class="row">
         <div class="small-12 medium-12 large-12 columns">
             <ul class="inline-list navbar-footer-font">
-                <li><a href="http://beerstrot.github.io">Home</a></li>
-                <li><a href="http://beerstrot.github.io/menu">Menu</a></li>
-                <li><a href="http://beerstrot.github.io/eventi">Eventi</a></li>
-                <li><a href="http://beerstrot.github.io/chi-siamo">Chi Siamo</a></li>
-                <li><a href="http://beerstrot.github.io/contatti">Contatti</a></li>
-                <li><a href="http://beerstrot.github.io/blog">Blog</a></li>
+                <li><a href="http://beerstrot.it">Home</a></li>
+                <li><a href="http://beerstrot.it/menu">Menu</a></li>
+                <li><a href="http://beerstrot.it/eventi">Eventi</a></li>
+                <li><a href="http://beerstrot.it/chi-siamo">Chi Siamo</a></li>
+                <li><a href="http://beerstrot.it/contatti">Contatti</a></li>
+                <li><a href="http://beerstrot.it/blog">Blog</a></li>
             </ul>
         </div>
     </div>
 <!-- fine navbar footer-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.1/js/foundation.min.js"></script>
-    <script src="http://beerstrot.github.io/js/app.min.js"></script>
+    <script src="http://beerstrot.it/js/app.min.js"></script>
 </body>
 </html>
