--- a/chi-siamo/team/old-andrea-tagliazucchi.html
+++ b/chi-siamo/team/old-andrea-tagliazucchi.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Fondatore di Beerstrot e barista in charge" />
     <meta name="author" content="Ca' Vecchia Beerstrot" />
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" />
-    <link rel="stylesheet" href="http://beerstrot.github.io/css/app.css"/>
+    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -287,6 +287,6 @@
 <!-- fine navbar -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.1/js/foundation.min.js"></script>
-    <script src="http://beerstrot.github.io/js/app.min.js"></script>
+    <script src="http://beerstrot.it/js/app.min.js"></script>
 </body>
 </html>
