--- a/eventi/index.html
+++ b/eventi/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Ca' Vecchia Beerstrot" />
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" />
     <link rel="canonical" href="http://beerstrot.it/eventi"/>
-    <link rel="stylesheet" href="http://beerstrot.github.io/css/app.css"/>
+    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -18,7 +18,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
-                 <h1><a href="http://beerstrot.github.io"><img class="img-logo" src="http://beerstrot.github.io/img/svgs/logo-red.svg" alt="logo"></a></h1>
+                 <h1><a href="http://beerstrot.it"><img class="img-logo" src="http://beerstrot.it/img/svgs/logo-red.svg" alt="logo"></a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -27,15 +27,15 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/menu">Menu</a></li>
+                <li><a href="http://beerstrot.it/menu">Menu</a></li>
                 <li class="divider"></li>
-                <li class="active"><a href="http://beerstrot.github.io/eventi">Eventi</a></li>
+                <li class="active"><a href="http://beerstrot.it/eventi">Eventi</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/chi-siamo">Chi Siamo</a></li>
+                <li><a href="http://beerstrot.it/chi-siamo">Chi Siamo</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/contatti">Contatti</a></li>
+                <li><a href="http://beerstrot.it/contatti">Contatti</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/blog">Blog</a></li>
+                <li><a href="http://beerstrot.it/blog">Blog</a></li>
             </ul>
         </section>
     </nav>
@@ -56,12 +56,12 @@
                     <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
                 </div>
                 <div class="medium-3 large-3 columns">
-                    <a href="http://beerstrot.github.io/eventi/apertura.html"><img class="extra-space-image-event" src="http://beerstrot.github.io/img/thumbs/burlesque-th.jpg" alt="Burlesque"></a>
+                    <a href="http://beerstrot.it/eventi/apertura.html"><img class="extra-space-image-event" src="http://beerstrot.it/img/thumbs/burlesque-th.jpg" alt="Burlesque"></a>
                 </div>
                 <div class="medium-6 large-6 columns">
                     <h2>Apertura col botto</h2>
                     <p>Iniziano le danze e le bevute con uno spettacolo indimenticabile, birre fantastiche e hamburger incredibili</p>
-                    <a href="http://beerstrot.github.io/eventi/apertura.html">Scopri l'evento &rarr;</a>
+                    <a href="http://beerstrot.it/eventi/apertura.html">Scopri l'evento &rarr;</a>
                 </div>
                 <div class="row">
                     <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
@@ -183,18 +183,18 @@
     <div class="row">
         <div class="small-12 medium-12 large-12 columns">
             <ul class="inline-list navbar-footer-font">
-                <li><a href="http://beerstrot.github.io">Home</a></li>
-                <li><a href="http://beerstrot.github.io/menu">Menu</a></li>
-                <li><a href="http://beerstrot.github.io/eventi">Eventi</a></li>
-                <li><a href="http://beerstrot.github.io/chi-siamo">Chi Siamo</a></li>
-                <li><a href="http://beerstrot.github.io/contatti">Contatti</a></li>
-                <li><a href="http://beerstrot.github.io/blog">Blog</a></li>
+                <li><a href="http://beerstrot.it">Home</a></li>
+                <li><a href="http://beerstrot.it/menu">Menu</a></li>
+                <li><a href="http://beerstrot.it/eventi">Eventi</a></li>
+                <li><a href="http://beerstrot.it/chi-siamo">Chi Siamo</a></li>
+                <li><a href="http://beerstrot.it/contatti">Contatti</a></li>
+                <li><a href="http://beerstrot.it/blog">Blog</a></li>
             </ul>
         </div>
     </div>
 <!-- fine navbar footer-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.1/js/foundation.min.js"></script>
-    <script src="http://beerstrot.github.io/js/app.min.js"></script>
+    <script src="http://beerstrot.it/js/app.min.js"></script>
 </body>
 </html>
