--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
-                 <h1><a href="http://beerstrot.github.io"><img class="img-logo" src="http://beerstrot.github.io/img/svgs/logo-red.svg" alt="logo"></a></h1>
+                 <h1><a href="http://beerstrot.it"><img class="img-logo" src="http://beerstrot.it/img/svgs/logo-red.svg" alt="logo"></a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -28,15 +28,15 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/menu">Menu</a></li>
+                <li><a href="http://beerstrot.it/menu">Menu</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/eventi">Eventi</a></li>
+                <li><a href="http://beerstrot.it/eventi">Eventi</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/chi-siamo">Chi Siamo</a></li>
+                <li><a href="http://beerstrot.it/chi-siamo">Chi Siamo</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/contatti">Contatti</a></li>
+                <li><a href="http://beerstrot.it/contatti">Contatti</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.github.io/blog">Blog</a></li>
+                <li><a href="http://beerstrot.it/blog">Blog</a></li>
             </ul>
         </section>
     </nav>
@@ -48,7 +48,7 @@
                 <h1 class="text-center"itemprop="description">Birra artigianale e alta cucina&#8230;<br>alla portata di tutti</h1>
             </div>
             <div class="small-centerd small-12  medium-6 large-6 columns">
-                <img src="http://beerstrot.github.io/img/large/birreria.jpg" alt="">
+                <img src="http://beerstrot.it/img/large/birreria.jpg" alt="">
             </div>
           
         </div>
@@ -60,10 +60,10 @@
                 <h1>Menu</h1>
                 <p>Birra artigianale e cibo di altissima qualità. Facciamo gli hamburger più buoni al mondo utilizzando solo carni da animali al pascolo e verdure fresche di stagione.</p>
                 <p>Cibi preparati con cura maniacale: dalle materie prime, alla preparazione, alla presentazione.</p>
-                <a role="button" href="http://beerstrot.github.io/menu">Scopri le Delizie &rarr;</a>
+                <a role="button" href="http://beerstrot.it/menu">Scopri le Delizie &rarr;</a>
             </div>
             <div class="medium-6 large-6 columns">
-                <a role="button" href="http://beerstrot.github.io/menu"><img src="http://beerstrot.github.io/img/large/tris-mini-hamburger.jpg" alt="" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://beerstrot.it/menu"><img src="http://beerstrot.it/img/large/tris-mini-hamburger.jpg" alt="" class="extra-space-image-tab-home"></a>
             </div>
         </div>
     </div>
@@ -79,10 +79,10 @@
                         <li>Burlesque</li>
                     </ul>
                     <p>E tanto altro&hellip;</p>
-                    <a role="button" href="http://beerstrot.github.io/eventi">Scopri i Prossimi Eventi &rarr;</a>
+                    <a role="button" href="http://beerstrot.it/eventi">Scopri i Prossimi Eventi &rarr;</a>
             </div>
             <div class="medium-6 large-6 medium-pull-6 large-pull-6 columns">
-                <a role="button" href="http://beerstrot.github.io/eventi"><img src="http://beerstrot.github.io/img/large/burlesque.jpg" alt="" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://beerstrot.it/eventi"><img src="http://beerstrot.it/img/large/burlesque.jpg" alt="" class="extra-space-image-tab-home"></a>
             </div>
         </div>
     </div>
@@ -93,10 +93,10 @@
                 <p>Tutto, ma proprio tutto su di noi. Chi siamo, la nostra storia, perchè esistiamo.</p>
                 <p>Immagini e video dell'esperienza che vivi.</p>
                 <p>Cosa dicono gli altri di noi: recensioni e commenti.</p>
-                <a role="button" href="http://beerstrot.github.io/chi-siamo">Scopri Chi Siamo &rarr;</a>
+                <a role="button" href="http://beerstrot.it/chi-siamo">Scopri Chi Siamo &rarr;</a>
             </div>
             <div class="medium-6 large-6 columns">
-                <a role="button" href="http://beerstrot.github.io/chi-siamo"><img src="http://beerstrot.github.io/img/large/birreria-panorama.jpg" alt="" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://beerstrot.it/chi-siamo"><img src="http://beerstrot.it/img/large/birreria-panorama.jpg" alt="" class="extra-space-image-tab-home"></a>
             </div>
         </div>
     </div>
@@ -106,10 +106,10 @@
                 <h1>Contatti</h1>
                 <p>Come raggiungerci, contattarci o prenotare un tavolo</p>
                 <p>Vuoi la nostra birra nel tuo pub? Sei un blogger o un giornalista? Cerchi lavoro? Compila i form e ricevi tutte le informazioni necessarie.</p>
-                <a role="button" href="http://beerstrot.github.io/contatti">Contattaci &rarr;</a>
+                <a role="button" href="http://beerstrot.it/contatti">Contattaci &rarr;</a>
             </div>
             <div class="medium-6 large-6 medium-pull-6 large-pull-6 columns">
-                <a role="button" href="http://beerstrot.github.io/contatti"><img src="http://beerstrot.github.io/img/large/mappa.jpg" alt="" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://beerstrot.it/contatti"><img src="http://beerstrot.it/img/large/mappa.jpg" alt="" class="extra-space-image-tab-home"></a>
             </div>
         </div>
     </div>
@@ -118,10 +118,10 @@
             <div class="medium-6 large-6 columns">
                 <h1>Blog</h1>
                 <p>Tutte le novità, nuove birre, nuovi cibi e abbinamenti, curiosità sugli eventi e su cosa bolle in pentola&hellip;</p>
-                <a role="button" href="http://beerstrot.github.io/blog">Vai alle Notizie e alle Novità &rarr;</a>
+                <a role="button" href="http://beerstrot.it/blog">Vai alle Notizie e alle Novità &rarr;</a>
             </div>
             <div class="medium-6 large-6 columns">
-                <a role="button" href="http://beerstrot.github.io/blog"><img src="http://beerstrot.github.io/img/large/birre-in-love.jpg" alt="" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://beerstrot.it/blog"><img src="http://beerstrot.it/img/large/birre-in-love.jpg" alt="" class="extra-space-image-tab-home"></a>
             </div>
         </div>
     </div>
@@ -236,18 +236,18 @@
     <div class="row">
         <div class="small-12 medium-12 large-12 columns">
             <ul class="inline-list navbar-footer-font">
-                <li><a href="http://beerstrot.github.io">Home</a></li>
-                <li><a href="http://beerstrot.github.io/menu">Menu</a></li>
-                <li><a href="http://beerstrot.github.io/eventi">Eventi</a></li>
-                <li><a href="http://beerstrot.github.io/chi-siamo">Chi Siamo</a></li>
-                <li><a href="http://beerstrot.github.io/contatti">Contatti</a></li>
-                <li><a href="http://beerstrot.github.io/blog">Blog</a></li>
+                <li><a href="http://beerstrot.it">Home</a></li>
+                <li><a href="http://beerstrot.it/menu">Menu</a></li>
+                <li><a href="http://beerstrot.it/eventi">Eventi</a></li>
+                <li><a href="http://beerstrot.it/chi-siamo">Chi Siamo</a></li>
+                <li><a href="http://beerstrot.it/contatti">Contatti</a></li>
+                <li><a href="http://beerstrot.it/blog">Blog</a></li>
             </ul>
         </div>
     </div>
 <!-- fine navbar footer-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.1/js/foundation.min.js"></script>
-    <script src="http://beerstrot.github.io/js/app.min.js"></script>
+    <script src="http://beerstrot.it/js/app.min.js"></script>
 </body>
 </html>
