fix active status

--- a/eventi/index.html
+++ b/eventi/index.html
@@ -27,9 +27,9 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li class="active"><a href="http://beerstrot.it/menu/">Menu</a></li>
+                <li><a href="http://beerstrot.it/menu/">Menu</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
+                <li class="active"><a href="http://beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a></li>
                 <li class="divider"></li>
