--- a/contatti/index.html
+++ b/contatti/index.html
@@ -27,13 +27,13 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li class="active"><a href="http://beerstrot.it/menu/">Menu</a></li>
+                <li><a href="http://beerstrot.it/menu/">Menu</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/contatti/">Contatti</a></li>
+                <li  class="active"><a href="http://beerstrot.it/contatti/">Contatti</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/blog/">Blog</a></li>
             </ul>
