--- a/eventi/apertura.html
+++ b/eventi/apertura.html
@@ -83,7 +83,7 @@
 <!-- call to action inizio -->
                 <div class="row">
                     <div class="medium-12 large-12 columns">
-                        <a role="button" href="tel:+393385071940" class="button extra-space-button">Prenota un tavolo</a>
+                        <a role="button" href="tel:+393385071940" class="button extra-space-button"><i class="fi-telephone"></i>Prenota un tavolo</a>
                     </div>
                 </div>
             </div>   
@@ -120,7 +120,7 @@
         <div class="medium-8 medium-push-4 large-8 large-push-4 columns">
             <div class="clearfix">
                 <a href="http://beerstrot.it/eventi" class="left">&larr; Lista eventi</a>
-                <a href="http://beerstrot.it/eventi/flamenco-e-birra.html" class="right">Flamenco e Birra &rarr; </a>
+                <!-- <a href="http://beerstrot.it/eventi/flamenco-e-birra.html" class="right">Flamenco e Birra &rarr; </a> -->
             </div>
         </div> 
     </div>
