--- a/eventi/apertura.html
+++ b/eventi/apertura.html
@@ -3,7 +3,7 @@
 <html class="no-js" lang="it" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Apertura col botto</title>
     <meta name="description" content="Apriamo le danze con un grande spettacolo. Birre artigianali e hamburger come se piovesse."/>
     <meta name="author" content="Giulia Mazza"/>
