--- a/menu/menu-beerstrot-ipa.html
+++ b/menu/menu-beerstrot-ipa.html
@@ -3,7 +3,7 @@
 <html class="no-js" lang="it" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Beerstrot IPA</title>
     <meta name="description" content="Una birra extra amara di gran classe" />
     <meta name="author" content="Ca' Vecchia Beerstrot" />
