--- a/menu/menu-lasagne-di-verdure.html
+++ b/menu/menu-lasagne-di-verdure.html
@@ -3,7 +3,7 @@
 <html class="no-js" lang="it" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Lasagne di Verdura</title>
     <meta name="description" content="Finalmente un piatto vegetariano. Pasta sfoglia con spinaci rigorosamente fatta in casa e tirata sottile come un gfoglio di carta. Un mix esplosivo di verdure." />
     <meta name="author" content="Ca' Vecchia Beerstrot" />
