--- a/index.html
+++ b/index.html
@@ -56,33 +56,41 @@
 <!-- fine hero -->
     <div class="panel-home-n">
         <div class="row">
-            <div class="medium-6 large-6 columns">
+            <div class="medium-12 large-12 columns">
                 <h1>Menu</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
+                <a role="button" href="http://beerstrot.it/menu/"><img src="http://beerstrot.it/img/large/tris-mini-hamburger.jpg" alt=""></a>
+            </div>
+            <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
                 <p>Birra artigianale e cibo di altissima qualità. Facciamo gli hamburger più buoni al mondo utilizzando solo carni da animali al pascolo e verdure fresche di stagione.</p>
                 <p>Cibi preparati con cura maniacale: dalle materie prime, alla preparazione, alla presentazione.</p>
                 <a role="button" href="http://beerstrot.it/menu/">Scopri le Delizie &rarr;</a>
-            </div>
-            <div class="medium-6 large-6 columns">
-                <a role="button" href="http://beerstrot.it/menu/"><img src="http://beerstrot.it/img/large/tris-mini-hamburger.jpg" alt="" class="extra-space-image-tab-home"></a>
             </div>
         </div>
     </div>
     <div class="panel-home-2n">
         <div class="row">
-            <div class="medium-6 large-6 medium-push-6 large-push-6 columns">
+            <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
                 <h1>Eventi</h1>
-                <p>A Beerstrot facciamo un sacco di eventi:</p>
-                    <ul class="no-margin-list-bullet">
-                        <li>Abbinamenti di cibi e birre</li>
-                        <li>Concerti con volume non assordante</li>
-                        <li>Spettacoli circensi</li>
-                        <li>Burlesque</li>
-                    </ul>
-                    <p>E tanto altro&hellip;</p>
-                    <a role="button" href="http://beerstrot.it/eventi/">Scopri i Prossimi Eventi &rarr;</a>
             </div>
-            <div class="medium-6 large-6 medium-pull-6 large-pull-6 columns">
-                <a role="button" href="http://beerstrot.it/eventi/"><img src="http://beerstrot.it/img/large/burlesque.jpg" alt="" class="extra-space-image-tab-home"></a>
+        </div>
+        <div class="row">
+            <div class="medium-6 large-6 columns">
+                <a role="button" href="http://beerstrot.it/eventi/"><img src="http://beerstrot.it/img/large/burlesque.jpg" alt="" class=""></a>
+            </div>
+            <div class="medium-6 large-6 columns">
+                <p>A Beerstrot facciamo un sacco di eventi:</p>
+                <ul class="no-margin-list-bullet">
+                    <li>Abbinamenti di cibi e birre</li>
+                    <li>Concerti con volume non assordante</li>
+                    <li>Spettacoli circensi</li>
+                    <li>Burlesque</li>
+                    <li>E tanto altro&hellip;</li>
+                </ul>
+                <a role="button" href="http://beerstrot.it/eventi/">Scopri i Prossimi Eventi &rarr;</a>
             </div>
         </div>
     </div>
