fixed home positioning

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div class="row">
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-                <a role="button" href="http://beerstrot.it/menu/"><img src="http://beerstrot.it/img/large/tris-mini-hamburger.jpg" alt=""></a>
+                <a role="button" href="http://beerstrot.it/menu/"><img src="http://beerstrot.it/img/large/tris-mini-hamburger.jpg" alt="" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
                 <p>Birra artigianale e cibo di altissima qualità. Facciamo gli hamburger più buoni al mondo utilizzando solo carni da animali al pascolo e verdure fresche di stagione.</p>
@@ -79,7 +79,7 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <a role="button" href="http://beerstrot.it/eventi/"><img src="http://beerstrot.it/img/large/burlesque.jpg" alt="" class=""></a>
+                <a role="button" href="http://beerstrot.it/eventi/"><img src="http://beerstrot.it/img/large/burlesque.jpg" alt="" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 columns">
                 <p>A Beerstrot facciamo un sacco di eventi:</p>
@@ -96,40 +96,52 @@
     </div>
     <div class="panel-home-n">
         <div class="row">
-            <div class="medium-6 large-6 columns" >
+            <div class="medium-12 large-12 columns">
                 <h1>Chi siamo</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
+                <a role="button" href="http://beerstrot.it/chi-siamo/"><img src="http://beerstrot.it/img/large/birreria-panorama.jpg" alt="" class="extra-space-image-tab-home"></a>
+            </div>
+            <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
                 <p>Tutto, ma proprio tutto su di noi. Chi siamo, la nostra storia, perchè esistiamo.</p>
                 <p>Immagini e video dell'esperienza che vivi.</p>
                 <p>Cosa dicono gli altri di noi: recensioni e commenti.</p>
                 <a role="button" href="http://beerstrot.it/chi-siamo/">Scopri Chi Siamo &rarr;</a>
             </div>
-            <div class="medium-6 large-6 columns">
-                <a role="button" href="http://beerstrot.it/chi-siamo/"><img src="http://beerstrot.it/img/large/birreria-panorama.jpg" alt="" class="extra-space-image-tab-home"></a>
-            </div>
         </div>
     </div>
     <div class="panel-home-2n">
         <div class="row">
-            <div class="medium-6 large-6 medium-push-6 large-push-6 columns">
+            <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
                 <h1>Contatti</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="medium-6 large-6 columns">
+                <a role="button" href="http://beerstrot.it/contatti/"><img src="http://beerstrot.it/img/large/mappa.jpg" alt="Mappa" class="extra-space-image-tab-home"></a>
+            </div>
+            <div class="medium-6 large-6 columns">
                 <p>Come raggiungerci, contattarci o prenotare un tavolo</p>
                 <p>Vuoi la nostra birra nel tuo pub? Sei un blogger o un giornalista? Cerchi lavoro? Compila i form e ricevi tutte le informazioni necessarie.</p>
                 <a role="button" href="http://beerstrot.it/contatti/">Contattaci &rarr;</a>
-            </div>
-            <div class="medium-6 large-6 medium-pull-6 large-pull-6 columns">
-                <a role="button" href="http://beerstrot.it/contatti/"><img src="http://beerstrot.it/img/large/mappa.jpg" alt="" class="extra-space-image-tab-home"></a>
             </div>
         </div>
     </div>
     <div class="panel-home-n">
         <div class="row">
-            <div class="medium-6 large-6 columns">
+            <div class="medium-12 large-12 columns">
                 <h1>Blog</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
+                <a role="button" href="http://beerstrot.it/blog/"><img src="http://beerstrot.it/img/large/birre-in-love.jpg" alt="" class="extra-space-image-tab-home"></a>
+            </div>
+            <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
                 <p>Tutte le novità, nuove birre, nuovi cibi e abbinamenti, curiosità sugli eventi e su cosa bolle in pentola&hellip;</p>
                 <a role="button" href="http://beerstrot.it/blog/">Vai alle Notizie e alle Novità &rarr;</a>
-            </div>
-            <div class="medium-6 large-6 columns">
-                <a role="button" href="http://beerstrot.it/blog/"><img src="http://beerstrot.it/img/large/birre-in-love.jpg" alt="" class="extra-space-image-tab-home"></a>
             </div>
         </div>
     </div>
