fixing event index hr for small

--- a/eventi/index.html
+++ b/eventi/index.html
@@ -63,7 +63,10 @@
                     <p>Iniziano le danze e le bevute con uno spettacolo indimenticabile, birre fantastiche e hamburger incredibili</p>
                     <a href="http://beerstrot.it/eventi/apertura.html">Scopri l'evento &rarr;</a>
                 </div>
-                <div class="row">
+<!-- ATTENZIONE-->
+<!-- ATTENZIONE-->
+<!-- rimuovere HIDE FOR SMALL quando si aggiunge nuovo elemento e metterlo solo nell'ultimo post-->
+                <div class="row hide-for-small">
                     <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
                         <hr>
                     </div>
