--- a/contatti/index.html
+++ b/contatti/index.html
@@ -67,7 +67,7 @@
                     <span class="hide-for-small"><a role="button" href="tel:+393385071940" class="button extra-space-button"><i class="fi-telephone"></i> Prenota un Tavolo</a></span>
             </div>
             <div class="medium-6 large-6 columns">
-                <a role="button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><img class="extra-space-image-tab-contatti" src="http://beerstrot.it/img/thumbs/mappa-th.jpg" alt="mappa"></a>
+                <a role="button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><img class="extra-space-image-tab-contatti" src="http://beerstrot.it/img/large/mappa.jpg" alt="Mappa"></a>
                 <span class="show-for-small"><br><a role="button" href="tel:+393385071940" class="button extra-space-button"><i class="fi-telephone"></i> Prenota un Tavolo</a></span>
             </div>
         </div>
