add download link

--- a/contatti/index.html
+++ b/contatti/index.html
@@ -112,7 +112,7 @@
                     </div>
                     <div class="row">
                         <div class="small-12 medium-12 columns">
-                            <a role="button" href="#" class="button extra-space-button">Scarica il Media Kit</a>
+                            <a role="button" href="http://beerstrot.it/contatti/Sierra%20Nevada%20MediaKit.pdf" download" class="button extra-space-button">Scarica il Media Kit</a>
                         </div>
                     </div>
                 </form>
